# hama

./: .gitignore  CHANGES.txt  DISCLAIMER.txt  LICENSE.txt  NOTICE.txt  README.md  README.txt  build.sbt  build.xml  pom.xml
0.4/: CHANGES.txt  NOTICE.txt
0.4/src/assemble/: core.xml
0.4/src/site/xdoc/: artwork.xml  developers.xml  downloads.xml  getting_started_with_hama.xml  hama_on_clouds.xml  index.xml  irc-channel.xml  issue-tracking.xml  mail-lists.xml  team-list.xml
0.4/yarn/: pom.xml
bsp/: build.sbt
bsp/src/test/resources/: log4j.properties
c++/: .project  pom.xml
c++/pipes/: Makefile.am  Makefile.in  configure  configure.ac
c++/pipes/impl/: config.h.in
c++/src/: CMakeLists.txt
c++/utils/: Makefile.am  Makefile.in  aclocal.m4  configure
c++/utils/impl/: StringUtils.cc  config.h.in
commons/: pom.xml
commons.v2/: build.sbt
conf/: findbugs-exclude-filter.xml  groomservers  hama-default.xml  hama-env.sh  hama-env.sh.template  hama-site.xml  log4j.properties
contrib/monitor-plugin/jvm-metrics/: pom.xml
core/: pom.xml
core/conf/: groomservers  hama-default.xml  hama-env.sh  hama-site.xml  log4j.properties
core/dev-support/: saveVersion.sh
docker/: Dockerfile  README.md
docs/diagram/: hama-diagram.pptx  yarn-hama-diagram.pptx
examples/: pom.xml
graph/: pom.xml
io/: build.sbt
jdbm/: pom.xml
membership/: build.sbt
mesos/: pom.xml
ml/: pom.xml
python/: BSP.py  BSPPeer.py  BSPRunner.py  BinaryProtocol.py  BspJobConfiguration.py  HelloWorldBSP.py  KMeansBSP.py  README.txt
site/: pom.xml
src/assemble/: bin.xml  core.xml  src.xml  yarn.xml
src/docs/: status.xml
src/java/: groomserver-default.xml  overview.html
src/site/: site.xml
src/site/resources/: doap_Hama.rdf
src/site/xdoc/: artwork.xml  developers.xml  downloads.xml  getting_started_with_hama.xml  hama_bsp_tutorial.xml  hama_graph_tutorial.xml  hama_on_clouds.xml  index.xml  irc-channel.xml  issue-tracking.xml  mail-lists.xml  privacy_policy.xml  run_examples.xml  team-list.xml
src/test/testjar/: ClassSerializePrinting.java
src/webapps/bspmaster/: bspjob.jsp  bspmaster.jsp  index.html  machines.jsp
trunk/: CHANGES.txt  NOTICE.txt  README.txt
trunk/c++/: README.txt
trunk/c++/src/: CMakeLists.txt
trunk/c++/src/main/native/examples/: README.txt
trunk/c++/src/main/native/examples/conf/: matrixmultiplication.xml  piestimator.xml
trunk/c++/src/main/native/examples/impl/: DenseDoubleVector.cc  DenseDoubleVector.hh
trunk/c++/src/main/native/pipes/api/hama/: TemplateFactory.hh
trunk/c++/src/main/native/utils/api/hadoop/: SerialUtils.hh
trunk/c++/src/main/native/utils/impl/: SerialUtils.cc
trunk/conf/: log4j.properties
trunk/docs/diagram/: yarn-hama-diagram.pptx
trunk/examples/: pom.xml
trunk/graph/: pom.xml
trunk/ml/: pom.xml
trunk/src/assemble/: bin.xml
trunk/src/site/: site.xml
yarn/: pom.xml
(+1538 files in other folders)
